--- a/build.gradle
+++ b/build.gradle
@@ -59,10 +59,10 @@ loom {
 
 shadowJar {
 	dependencies {
-		exclude(dependency('net.fabricmc.fabric-api:fabric-api:*'))
-		exclude(dependency('net.fabricmc:yarn:*'))
-		exclude(dependency('net.fabricmc:fabric-loader:*'))
-		exclude(dependency('net.fabricmc.fabric-api:fabric-api:*'))
+		exclude(dependency('net.fabricmc.fabric-api:fabric-api:'))
+		exclude(dependency('net.fabricmc:yarn:'))
+		exclude(dependency('net.fabricmc:fabric-loader:'))
+		exclude(dependency('net.fabricmc.fabric-api:fabric-api:'))
 	}
 }
 
@@ -70,15 +70,19 @@ shadowJar {
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
+            artifactId = 'textcomponents-fabric'
 			from components.java
 		}
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		maven {
+            credentials {
+                username 'admin'
+                password = ''
+            }
+	    	url 'https://repo.bb1.fun/releases'
+        }
 	}
 }
